tests/error/comptime/check_dereference17.bz
// error: invalid memory access of an object of type 'mut i32'
// note: while evaluating expression at compile time
// note: lifetime of the stack object has already ended
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		({
			mut i = 0;
			i
		}) = 0;
	});
}
